--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -5,22 +5,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
-<script type="text/javascript" src="{{ url_for('static', filename='IRViz.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
-<div class = "ex1">
+
+  <div id="upload">abc</div>
+
+  <div class = "ex1">
 <select id="mySelect">
   <option>MAP</option>
   <option>nDCG</option>
 </select>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<input type="text" id="range-value" value="2002" class="autoupdate"/>
-<input type="submit" value="Submit">
-</div>
 
 <div id="tester"></div>
 
 <div id="topslider"></div>
 
+<script type="text/javascript" src="{{ url_for('static', filename='IRViz.js') }}"></script>
 </html>
