Further updates, still getting 405 errors.

--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -16,10 +16,12 @@
   <option>MAP</option>
   <option>nDCG</option>
 </select>
+  </div>
 
 <div id="tester"></div>
 
 <div id="topslider"></div>
 
 <script type="text/javascript" src="{{ url_for('static', filename='IRViz.js') }}"></script>
+
 </html>
