Fixed some errors. Now getting secret key errors.

--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -8,14 +8,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
-
-  <div id="upload">abc</div>
-
+  <div id="upload"></div>
   <div class = "ex1">
-<select id="mySelect">
-  <option>MAP</option>
-  <option>nDCG</option>
-</select>
+      <select id="mySelect">
+        <option>MAP</option>
+        <option>nDCG</option>
+      </select>
   </div>
 
 <div id="tester"></div>
