--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -10,9 +10,12 @@
 
   <div id="upload"></div>
   <div class = "ex1">
+      <b>Select statistics to display: </b>
       <select id="mySelect">
-        <option>MAP</option>
-        <option>nDCG</option>
+        <option>Average</option>
+        <option>Median</option>
+        <option>SD</option>
+        <option>MAD</option>
       </select>
   </div>
 
