--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -10,6 +10,12 @@
 
   <div id="multiple"></div>
 
+ <form id="target" style="margin-left: 200px; margin-top: 10px;">
+ <div id="choose-first"></div>
+ <div id="choose-second"></div>
+ <input type="submit" value="Submit">
+ </form>
+
   <div style="margin-left: 500px; margin-top: 10px;">
       <b>Select statistics to display: </b>
       <select id="mySelect" autofocus>
