--- a/src/templates/viz.html
+++ b/src/templates/viz.html
@@ -19,7 +19,7 @@
   <div style="margin-left: 500px; margin-top: 10px;">
       <b>Select statistics to display: </b>
       <select id="mySelect" autofocus>
-        <option>select</option>
+        <option disabled selected value>select</option>
         <option>Average</option>
         <option>Median</option>
         <option>SD</option>
